Update Inspector Area with Assign Fixers to Work Orders and Show own Inspection Tasks

--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/newWorkAssetsToday_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/newWorkAssetsToday_Partial.cshtml
@@ -48,7 +48,7 @@
                     @asset.ManufacturedDate
                 </td>
                 <td>
-                    @asset.Price
+                    @asset.Price EGP
                 </td>
                 <td>
                     @asset.Vendor
