--- a/BuildingFacilityManager/Areas/Admin/Views/Task/AddTasks_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Task/AddTasks_Partial.cshtml
@@ -49,13 +49,13 @@
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(e => e.InspectionTask.StartDate)
-                            @Html.TextBoxFor(c => c.InspectionTask.StartDate, new { @class = "form-control" })
+                            @Html.TextBoxFor(c => c.InspectionTask.StartDate, new { @class = "datepicker form-control", @type = "date" })
                             @Html.ValidationMessageFor(e => e.InspectionTask.StartDate)
 
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(e => e.InspectionTask.EndDate)
-                            @Html.TextBoxFor(c => c.InspectionTask.EndDate, new { @class = "form-control" })
+                            @Html.TextBoxFor(c => c.InspectionTask.EndDate, new { @class = "datepicker form-control", @type = "date" })
                             @Html.ValidationMessageFor(e => e.InspectionTask.EndDate)
 
                         </div>
