--- a/BuildingFacilityManager/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Views/Shared/_Layout.cshtml
@@ -13,13 +13,14 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <img src="~/Content/Images/navbar-logo.png" style="float:left">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Facility Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-               
+
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -43,6 +44,7 @@
 
                     }
                     <li>  @Html.ActionLink("DashBoard", "Index", "Dashboard", new { area = area }, null)</li>
+                    <li> @Html.ActionLink("Contact Us", "Contact", "Home", new { area = "" }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
