--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <img src="~/Content/Images/navbar-logo.png" style="float:left">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
