--- a/BuildingFacilityManager/Areas/Admin/Views/Shared/_LoginPartial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", new { area = "" }, new { title = "Manage" })
+            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", new { area = "" }, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
