--- a/BuildingFacilityManager/Areas/Inspector/Views/Asset/SingleAssetDetailsOrderTable_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Inspector/Views/Asset/SingleAssetDetailsOrderTable_Partial.cshtml
@@ -1,16 +1,18 @@
-﻿@model BuildingFacilityManager.ViewModels.AssetsViewModel
-@{
-    /**/
+﻿@using Microsoft.AspNet.Identity
+@model BuildingFacilityManager.ViewModels.WorkOrderViewModel
 
-    ViewBag.Title = ViewBag.AssetLabel;
-    Layout = "../Shared/_Layout.cshtml";
-}
-
-<h3>Work Orders for @ViewBag.AssetLabel</h3>
+<h3>@Model.Asset.Label WorkOrders</h3>
 <div class="thumbnail">
 
     <div class="caption">
-        <table class="table table-hover table-bordered" id="assetsWorkOrder">
+
+
+
+        <button type="button" class="btn btn-success" style="float: right" data-toggle="modal" data-target="#myModal-AddWork">
+            Add
+        </button>
+
+        <table class="table table-hover table-bordered" id="workOrderTable">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -22,10 +24,11 @@
                     <th>Date</th>
                     <th>Reporter</th>
                     <th>Fixer</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var work in Model.WorkOrders)
+                @foreach (var work in Model.Asset.WorkOrders)
                 {
 
                     <tr id="id-@work.Id">
@@ -51,13 +54,14 @@
                         <td>
                             @work.Date
                         </td>
+
                         <td>
                             @{
 
-                                string space = " ";
+
                                 if (@work.Reporter != null)
                                 {
-                                    @work.Reporter.FirstName @space @work.Reporter.LastName
+                                    @work.Reporter.Fullname
                                 }
                             }
 
@@ -67,26 +71,27 @@
                             @{
                                 if (@work.Fixer != null)
                                 {
-                                    @work.Fixer.FirstName @space @work.Fixer.LastName
+                                    @work.Fixer.Fullname
 
                                 }
                             }
+                        </td>
+                        <td>
+                            @{
+
+                                if (User.Identity.GetUserId() == @work.ReporterId)
+                                {
+                                    <button type="button" title="Assign to a Fixer" style="background-color: skyblue; background-repeat: no-repeat; border: none; cursor: pointer; overflow: hidden; outline: none;" data-toggle="modal" data-target="#Assign-Fixer" onclick="WorkIdForAssignFixer(@work.Id)">
+                                        <span class="fas fa-user-tag" aria-hidden="true"></span>
+                                    </button>
+                                }
+                            }
+                            
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
 
-
     </div>
 </div>
-
-
-@section scripts
-{
-    <script>
-        $(document).ready(function () {
-            $("#assetsWorkOrder").DataTable();
-        });
-    </script>
-}
