--- a/BuildingFacilityManager/Views/Home/Contact.cshtml
+++ b/BuildingFacilityManager/Views/Home/Contact.cshtml
@@ -2,16 +2,14 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    ITI<br />
+    Smart Village, Giza, Egypt<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +201061304489
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:engineer.ahmedabdelhak@gmail.com">engineer.ahmedabdelhak@gmail.com</a><br />
 </address>
