--- a/BuildingFacilityManager/Views/Home/Index.cshtml
+++ b/BuildingFacilityManager/Views/Home/Index.cshtml
@@ -1,5 +1,14 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<style type="text/css">
+    .image-homepage-fc {
+        margin-left: -300px;
+    }</style>
+
+
+<img class="image-homepage-fc" src="~/Content/Images/Services.png" width="1630" height="534" alt="Services">
+<img class="image-homepage-fc" src="~/Content/Images/happ.png" width="1630" height="534" alt="Services">
+<img class="image-homepage-fc" src="~/Content/Images/mark.png" width="1630" height="534" alt="Services">
 
 <img src="~/Content/Images/HomePage.jpg" alt="Facility Management HomePage">
