--- a/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Building/Stories_Partial.cshtml
@@ -1,20 +1,23 @@
 ﻿@model BuildingFacilityManager.ViewModels.BuildingViewModel
 
 
-
-    <button type="button" class="btn btn-success" style="float: right" data-toggle="modal" data-target="#myModal-AddStorey">
-        Add
-    </button>
+<button type="button" class="btn btn-success" style="float: right" data-toggle="modal" data-target="#myModal-AddStorey">
+    Add
+</button>
     <h3>Stories</h3>
 <div class="thumbnail">
 
 <div class="caption">
 
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-bordered" id="stories">
         <thead>
         <tr>
+            <th>Id</th>
             <th>Label</th>
             <th>Description</th>
+            <th>Length</th>
+            <th>Width</th>
+            <th>Level</th>
         </tr>
         </thead>
         <tbody>
@@ -25,10 +28,22 @@
             <tr id="id-@storey.Id">
                
                 <td>
+                    @storey.Id
+                </td>
+                <td>
                     @storey.Label
                 </td>
                 <td>
                     @storey.Description
+                </td>
+                <td>
+                    @storey.Length  m
+                </td>
+                <td>
+                    @storey.Width  m
+                </td>
+                <td>
+                    +@storey.Level  m
                 </td>
             </tr>
         }
