--- a/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Admin/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
@@ -6,7 +6,7 @@
         <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fas fa-fw fa-list"></i>
+                    <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="mr-5">(@Model.WorkOrders.Count) new Work Orders</div>
             </div>
@@ -19,22 +19,6 @@
         </div>
     </div>
 
-    <div class="col-sm-4 mb-3">
-        <div class="card text-white bg-success o-hidden h-100">
-            <div class="card-body">
-                <div class="card-body-icon">
-                    <i class="fas fa-fw fa-shopping-cart"></i>
-                </div>
-                <div class="mr-5">(0) new Purchase Orders</div>
-            </div>
-            <a class="card-footer text-white clearfix small z-1" href="#">
-                <span class="float-left">View Details</span>
-                <span class="float-right">
-                    <i class="fas fa-angle-right"></i>
-                </span>
-            </a>
-        </div>
-    </div>
 
     <div class="col-sm-4 mb-3">
         <div class="card text-white bg-primary o-hidden h-100">
@@ -52,4 +36,23 @@
             </a>
         </div>
     </div>
+
+
+    <div class="col-sm-4 mb-3">
+        <div class="card text-white bg-success o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fas fa-plus-square"></i>
+                </div>
+                <div class="mr-5">(@Model.TodayInstalledAssets.Count) new Installed Assets</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="#InstalledAssetsToday">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fas fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+
 </div>
