--- a/BuildingFacilityManager/Areas/Inspector/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Inspector/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
@@ -25,9 +25,9 @@
         <div class="card text-white bg-success o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fas fa-fw fa-life-ring"></i>
+                    <i class="fas fa-list-alt"></i>
                 </div>
-                <div class="mr-5">(@Model.ScheduledInspectionTasks.Count) My Today's Scheduled Tasks</div>
+                <div class="mr-5">(@Model.ScheduledInspectionTasks.Count) My Scheduled Tasks</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#ScheduledTasksTable">
                 <span class="float-left">View Details</span>
@@ -42,7 +42,7 @@
         <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fas fa-fw fa-list"></i>
+                    <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="mr-5">(@Model.MyCreatedWorkOrdersToday.Count) My Today's Reported Work Orders</div>
             </div>
