--- a/BuildingFacilityManager/Areas/Org/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
+++ b/BuildingFacilityManager/Areas/Org/Views/Dashboard/IconCardsTodayStats_Partial.cshtml
@@ -10,7 +10,7 @@
         <div class="card text-white bg-danger o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fas fa-fw fa-list"></i>
+                    <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="mr-5">(@Model.MyAssignedWorkOrdersToday.Count) My Today's Work Orders</div>
             </div>
@@ -27,7 +27,7 @@
         <div class="card text-white bg-success o-hidden h-100">
             <div class="card-body">
                 <div class="card-body-icon">
-                    <i class="fas fa-fw fa-list"></i>
+                    <i class="fas fa-clipboard-list"></i>
                 </div>
                 <div class="mr-5">(@Model.MyAssignedWorkOrdersTotal.Count) Total Assigned Work Orders</div>
             </div>
